# Home_Alone_Work_Web_7

./: config.ini  my_select.py  pyproject.toml
HW_WEB_7/: README.md
conf/: db.py
migrations/versions/: e566ef78b42e_init.py
seeds/: seed.py
